--- a/Scripts/Multiple.Rpathruns.Rmd
+++ b/Scripts/Multiple.Rpathruns.Rmd
@@ -3,7 +3,7 @@ title: "100 Rsim runs"
 output: html_document
 ---
 
-#
+#Code to analyze approximately 500 datasets from the Monte Carlo analysis in Koehn et al. (2016)
 ```{r}
 library(dplyr)
 library(readr)
@@ -29,7 +29,7 @@ Cbase_list <- list()
 Cdiet_list <- list()
 ```
 
-#Don't need to run this again!! 
+#Don't need to run this again! Was just to modify datasets originally (have already saved them)
 ```{r}
 #Add columns to base parameters
 groups <- GroupInfo_CalCur_USE %>%
@@ -77,8 +77,7 @@ z2 <- read_csv(diet_list[1])
 
 ```
 
-#Loop through 500 data sets!! 
-
+#Loop through 500 data sets!
 #Reading in data, unbalanced model
 ```{r}
 CalCur_unbal2_list <- list() #Creating an empty list to store vectors so can index 
@@ -87,7 +86,7 @@ CalCur_unbal2_list <- list() #Creating an empty list to store vectors so can ind
   Cbase2 <-  base_list[[i]] 
   Cdiet2 <- diet_list[[i]]
 
-  #Edit the datasets
+#Edit the datasets
   CalCur_unbal2_list[[i]] <- read.rpath.params(Cbase2, Cdiet2)
   CalCur_unbal2_list[[i]][[1]] <- CalCur_unbal2_list[[i]][[1]] %>%
     select(-X)
@@ -98,10 +97,9 @@ CalCur_unbal2_list <- list() #Creating an empty list to store vectors so can ind
 
   check.rpath.params(CalCur_unbal2_list[[i]])
   }
-CalCur_unbal2_list[[439]]
 ```
 
-#Creating a balanced Ecopath model 
+#Creating 500 balanced Rpath models
 ```{r}
 Cal_bal2 <- list()
 for (i in 1:500) {
@@ -109,43 +107,33 @@ Cal_bal2[[i]] <- rpath(CalCur_unbal2_list[[i]])
   cbind(Cal_bal2[[i]]$Group, Cal_bal2[[i]]$EE)
   cbind(Cal_bal2[[i]]$Group, Cal_bal2[[i]]$TL) 
 }
-Cal_bal2[[430]]
 ```
 
-#Creating base scenario 
+#Creating 500 different base scenarios 
 ```{r}
- #Define different functional groups
-  all_species <- Cal_bal$Group[1:92] 
-  mammals <- Cal_bal$Group[71:85] 
-  seabirds <- c(Cal_bal$Group[60:70], Cal_bal$Group[86:92])
-  pred_fish  <- Cal_bal$Group[33:59] 
-  forage <- Cal_bal$Group[19:27]
-  diet_over_0.05 <- c(Cal_bal$Group[29], Cal_bal$Group[33], Cal_bal$Group[38], Cal_bal$Group[42], Cal_bal$Group[48], Cal_bal$Group[51], Cal_bal$Group[54], Cal_bal$Group[56], Cal_bal$Group[63], Cal_bal$Group[70], Cal_bal$Group[76], Cal_bal$Group[85])
-diet_over_0.05
+all_species <- Cal_bal$Group[1:92] 
 
-  #Base scenario
-  base_sim_scene2 <- list()
-  scene0.2 <- list()
-  run0.2 <- list()
-  for (i in 1:500) {
-  yearlist = 2001:2050
+#Base scenario
+base_sim_scene2 <- list()
+scene0.2 <- list()
+run0.2 <- list()
+for (i in 1:500) {
+yearlist = 2001:2050
 
 base_sim_scene2[[i]] <- rsim.scenario(Cal_bal2[[i]], CalCur_unbal2_list[[i]], years = yearlist)
 scene0.2[[i]] <- base_sim_scene2[[i]]
 run0.2[[i]] <- rsim.run(scene0.2[[i]], method='AB', years=yearlist) 
-#rsim.plot(run0[[i]], all_species) #This isn't working
   }
-
-rsim.plot(run0.2[[500]])
 
 ```
 
-#End biomass
+#Create function to look at end biomass 
 ```{r}
 end_biomass <- function(rsim){return(rsim$out_Biomass[dim(rsim$out_Biomass)[1], 2:(dim(rsim$out_Biomass)[2])])}
 end_biomass
 ```
 
+#Scenario 8: 25% harvest rate on mesopelagics for the 500 datasets
 ```{r}
 target_sp <- "mesopelagics"
 target_F <- 0.25
@@ -206,15 +194,26 @@ data_6.2[[i]] <- data_6.2[[i]] %>% filter(month==600) %>% mutate(X= i)
 
 ```
 
-#Confidence intervals: Want 95% CI for each model at month 600 for each commercially and noncommercially valuable species
+#Check to see if the seven datasets that produce unrealistic biomass estimates are outliers 
 ```{r}
-#Combine datasets into one: remove the rsim simulations that are incorrect
+rest_of_models_outliers <- entire_data_6 %>% group_by(spp) %>% summarize(IQR_biomass = IQR(biomass), quantile_lower = quantile(biomass, 0.25), quantile_upper = quantile(biomass, 0.75)) %>% mutate(lower_outlier = quantile_lower - (1.5*IQR_biomass), upper_outlier= quantile_upper + (1.5*IQR_biomass)) 
+
+seven_models_outliers <- bind_rows(data_6.2) %>% filter(X %in% c(67, 126, 237, 343, 396, 430, 472)) %>% arrange(X)
+seven_models_outliers <- transform(seven_models_outliers, ID.X=as.numeric(factor(X))) 
+seven_models_outliers <- seven_models_outliers %>% spread(ID.X, biomass) %>% rename("model1"= "1", "model2"= "2", "model3"= "3", "model4"= "4", "model5"= "5", "model6"= "6", "model7" = "7")
+
+#Each species final biomass in each of the 7 models are outliers 
+test <- seven_models_outliers %>% left_join(rest_of_models_outliers) %>% mutate(outlier1 = ifelse(model1 < lower_outlier|model1 > upper_outlier, TRUE, FALSE), outlier2 = ifelse(model2 < lower_outlier|model2 > upper_outlier, TRUE, FALSE), outlier3 = ifelse(model3 < lower_outlier|model3 > upper_outlier, TRUE, FALSE), outlier4 = ifelse(model4 < lower_outlier|model4 > upper_outlier, TRUE, FALSE), outlier5 = ifelse(model5 < lower_outlier|model5 > upper_outlier, TRUE, FALSE), outlier6 = ifelse(model6 < lower_outlier|model6 > upper_outlier, TRUE, FALSE), outlier7 = ifelse(model7 < lower_outlier|model7 > upper_outlier, TRUE, FALSE))
+
+```
+
+#Confidence intervals: Calculate 95% CI for each model at month 600 (last month in model) for commercially and non-commerically valuable species 
+
+```{r}
+#Combine datasets into one: remove the 7 rsim simulations that are outliers
 entire_data_6 <- bind_rows(data_6.2) %>% filter(X == 67)
 entire_data_6 <- bind_rows(data_6.2) %>% filter(!X %in% c(67, 126, 237, 343, 396, 430, 472)) %>% arrange(spp)
 entire_data_6 <- transform(entire_data_6,ID=as.numeric(factor(spp))) #Add column for ID that correlates to each different species 
-#Off for mesopelagics: row 67 (5.42), 126 (4.86), 237(1.1),343(8.26), 396(4.69), 430 (4.82), 472 (#2.183) 
-#Off for sharks: row 67 (15.58), row 126 (17.95), row 237 (2.30), 343 (27.85),  396(17.568), 430 (9.22), 472(6.74),  
-#Off for dolphins: row 67 (15.62), 126 (12.21), 237 (2.73), 343(15.75), 396(18), 430(9.11), 472(4.82),  
 
 #Calculate CI:
 n <- 500
@@ -248,7 +247,6 @@ quantile_0.975[[i]] <- quantile(subdf2$biomass, 0.975)
 df_quant2 <- as.data.frame(do.call(rbind, quantile_0.975)) %>% mutate(ID = 1:93)
 df_quant1 <- as.data.frame(do.call(rbind, quantile_0.025)) %>% mutate(ID = 1:93) %>% left_join(df_quant2, by = "ID") %>% relocate("ID")
 
-#Statistics
 sum_data_6 <- entire_data_6 %>% group_by(spp, ID) %>% summarise(mean_biomass = mean(biomass), sd_biomass= sd(biomass), median_biomass = median(biomass)) %>% left_join(df1, by = "ID")
 sum_data_6 <- sum_data_6 %>% left_join(df_quant1, by = "ID") %>% rename(quant_2.5 = "2.5%", quant_97.5 = "97.5%")
 sum_data_6 <- sum_data_6 %>% mutate("median.value" = cut(median_biomass, 
@@ -257,37 +255,18 @@ sum_data_6 <- sum_data_6 %>% mutate("median.value" = cut(median_biomass,
                       right = TRUE), "difference"= quant_97.5-quant_2.5)
 
 write.csv(sum_data_6, "/Users/sallydowd/Documents/OTZ.manuscript/Excel/sum_data_6.csv")
-
-max(sum_data_6$difference)*100
-min(sum_data_6$difference)*100
-mean(sum_data_6$difference)*100
-
-#Check to see if 500 end biomass values for each species are normally distributed
-#Only one is normally distributed-mesopelagics 
-listids <- list()
-for (ids in unique(entire_data_6$ID)){
-    subdf <- subset(x=entire_data_6, subset=ID==ids) #Subset returns subsets of data frame that meet certain condition (keeps original dataset intact and creates another dataframe with specific ID) 
-    listids[[ids]] <- shapiro.test(subdf$biomass) #Doing analysis on subsetting dataframes
-    print(listids[[ids]])
-}
 ```
 
 #Graph
 ```{r}
-#Organize datasets
-
-#Species overlap between noncomm and commercially valuable 
-noncommerical_predators
-new_noncomm <- noncommerical_predators[- c(9,7,11,4,6,17,1,12,8,10,19,5,16,18,15,14,13,3)]
-#Highlight albacore (9), arrowtooth (7), canary rockfish (11),greenstriped (4), lingcod (6), longspine thorny (17), other cephal (1), pacific ocean perch (12), sablefish (8), salmon (10), sharks (19), shelf rock (5), shortspine thorny (16), skates (18), slope rockfish (15), splitnose rockfish (14), widow rock (13), and yellowtail rock (3) in commercially valuable and remove from noncommercially valuable 
-
-#Filter datasets
+#Filter datasets for commercial and non-commercial predators of mesopelagic fish
+new_noncomm <- noncommerical_predators[- c(9,7,11,4,6,17,1,12,8,10,19,5,16,18,15,14,13,3)] #Define group that has non-commercial predators that only had non-commercial value (not commercial value as well)
 comm_value <- sum_data_6 %>% filter(spp %in% commercial_predators) 
 write.csv(comm_value, "/Users/sallydowd/Documents/OTZ.manuscript/Excel/comm_value.csv")
 noncomm_value <- sum_data_6 %>% filter(spp %in% new_noncomm)
 write.csv(noncomm_value, "/Users/sallydowd/Documents/OTZ.manuscript/Excel/noncomm_value.csv")
 
-#Make plots
+#Plot CIs for commercial and non-commercial predators 
 comm_value_500 <- comm_value %>% ggplot(aes(fill = median.value)) + 
   geom_pointrange(aes(y=spp, x=median_biomass, xmin=quant_2.5, xmax= quant_97.5), size=0.5, shape=22) + 
   scale_fill_grey() + 
@@ -307,7 +286,6 @@ pdf("/Users/SallyDowd/Documents/OTZ.manuscript/Images/Legends/multiple.legend.pd
 grid.draw(legend)
 dev.off()
 
-    #Next steps: rename some species (no capitalization)
 noncomm_value_500 <- noncomm_value %>% ggplot(aes(fill = median.value)) + geom_pointrange(aes(y=spp, x=median_biomass, xmin=quant_2.5, xmax= quant_97.5), size=0.5, color="black", shape=22) + 
 scale_fill_grey() + 
 scale_y_discrete(limits = unique(rev(noncomm_value$spp)), labels= c("Western Gull" = "Western gull", "Tufted Puffin" = "Tufted puffin", "Sea Lions"= "Sea lions", "Resident Orcas"= "Resident orcas", "Leach's S. Petrel" ="Leach's s. petrel", "Juv. Ele. Seal"="Juv. elephant seal", "Double corm."= "Double cormorant", "Brandt's corm." = "Brandt's cormorant", "Juv. rock." = "Juv. rockfish")) + 
@@ -321,7 +299,7 @@ ggsave(width = 6, height = 4, "~/Documents/OTZ.Manuscript/Images/500.noncommerci
 noncomm_value_500
 ```
 
-#Averages of paramters
+#Find the average of the input paramters (Biomass, QB, PB, and EE) from the seven outleir models and the 493 remaining models, trying to determine cause of unrealistic biomass estimates in the seven models
 ```{r}
 #Biomass
 seven_models <- CalCur_unbal2_list[c(67, 126, 237, 343, 396, 430, 472)]
@@ -389,52 +367,3 @@ write.csv(QB_comp, "/Users/sallydowd/Documents/OTZ.manuscript/Excel/500.inputs/Q
 write.csv(EE_comp, "/Users/sallydowd/Documents/OTZ.manuscript/Excel/500.inputs/EE_comp.csv")
 write.csv(PB_comp, "/Users/sallydowd/Documents/OTZ.manuscript/Excel/500.inputs/PB_comp.csv")
 ```
-
-##Biomass- keep this for now  
-```{r}
-seven_models_outliers <- CalCur_unbal2_list[c(67, 126, 237, 343, 396, 430, 472)]
-rest_of_models_outliers <- CalCur_unbal2_list[-c(67, 126, 237, 343, 396, 430, 472)]
-
-rest_of_models
-
-for (i in 1:493) {
-rest_of_models_outliers[[i]] <- rest_of_models_outliers[[i]]$model %>% dplyr::select(Biomass, QB, PB, EE, Group) 
-}
-
-table_Biomass <- bind_rows(rest_of_models_outliers) %>% group_by(spp) %>% summarize(IQR_biomass= IQR(biomass), quantile_lower = quantile(biomass, 0.025), quantile_upper = quantile(biomass, 0.95)) %>% mutate(lower_outlier = quantile_lower - (1.5*IQR_biomass), upper_outlier= quantile_upper + (1.5*IQR_biomass)) 
-
-table_1 <- seven_models[[1]]$model %>% dplyr::select(Biomass, QB, PB, EE, Group) %>% filter(Group == "mesopelagics") %>% group_by(Group) %>% summarize(biomass_7= mean(Biomass))
-
-table_Biomass %>% left_join(table_1) %>% mutate(outlier= ifelse(biomass_7 < lower_outlier|biomass_7 > upper_outlier, TRUE, FALSE))
-
-outlier <- list()
-for (i in 1:7) {
-seven_out <- seven_models[[i]]$model %>% dplyr::select(Biomass, QB, PB, EE, Group) %>% filter(Group== "mesopelagics")
-outlier[i] <- seven_out %>% left_join(table_Biomass) %>% mutate(outlier= ifelse(Biomass < lower_outlier|Biomass > upper_outlier, TRUE, FALSE)) %>% select(outlier)
-}
-outlier[7]
-
-table_Biomass_7 <- bind_rows(seven_models) %>% group_by(Group) %>% summarize(biomass_493 = mean(Biomass), sd= sd(Biomass))
-```
-
-#Are the results outliers
-```{r}
-rest_of_models_outliers <- entire_data_6 %>% group_by(spp) %>% summarize(IQR_biomass = IQR(biomass), quantile_lower = quantile(biomass, 0.25), quantile_upper = quantile(biomass, 0.75)) %>% mutate(lower_outlier = quantile_lower - (1.5*IQR_biomass), upper_outlier= quantile_upper + (1.5*IQR_biomass)) 
-
-seven_models_outliers <- bind_rows(data_6.2) %>% filter(X %in% c(67, 126, 237, 343, 396, 430, 472)) %>% arrange(X)
-seven_models_outliers <- transform(seven_models_outliers, ID.X=as.numeric(factor(X))) 
-seven_models_outliers <- seven_models_outliers %>% spread(ID.X, biomass) %>% rename("model1"= "1", "model2"= "2", "model3"= "3", "model4"= "4", "model5"= "5", "model6"= "6", "model7" = "7")
-
-#Each species final biomass in each of the 7 models are outliers 
-test <- seven_models_outliers %>% left_join(rest_of_models_outliers) %>% mutate(outlier1 = ifelse(model1 < lower_outlier|model1 > upper_outlier, TRUE, FALSE), outlier2 = ifelse(model2 < lower_outlier|model2 > upper_outlier, TRUE, FALSE), outlier3 = ifelse(model3 < lower_outlier|model3 > upper_outlier, TRUE, FALSE), outlier4 = ifelse(model4 < lower_outlier|model4 > upper_outlier, TRUE, FALSE), outlier5 = ifelse(model5 < lower_outlier|model5 > upper_outlier, TRUE, FALSE), outlier6 = ifelse(model6 < lower_outlier|model6 > upper_outlier, TRUE, FALSE), outlier7 = ifelse(model7 < lower_outlier|model7 > upper_outlier, TRUE, FALSE))
-
-```
-
-
-```
-
-
-
- 
-  
-
