--- a/Scripts/Diet.description.Rmd
+++ b/Scripts/Diet.description.Rmd
@@ -17,6 +17,10 @@ predators_mesopelagic <- Diet[,c(1,16,19, 29:30, 34, 38:39, 43:49, 51:57, 59:61,
 predators_mesopelagic
 mesopelagic.pred <- Diet[15, c(1,16,19, 29:30, 34, 38:39, 43:49, 51:57, 59:61, 64, 66:68, 70:71, 73:74, 77:81, 83, 86:89)]
 forage.pred <- Diet[19:27, c(1,16,19, 29:30, 34, 38:39, 43:49, 51:57, 59:61, 64, 66:68, 70:71, 73:74, 77:81, 83, 86:89)]
-  
+pmax(forage.pred)
+
+#Check if this is right 
+forage.pred$MAX <- apply(forage.pred[,-1],1,max,na.rm=TRUE)
+mesopelagic.pred$MAX <- apply(mesopelagic.pred[,-1],1,max,na.rm=TRUE)
 ```
 
